removed test classes

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,15 +1,26 @@
 [pytest]
+
+; Customising test file names
 python_files =
   test_*.py
   check_*.py
 
+; Customising test function names
 python_functions = 
   test_*
   *_test
 
+; Customising test folder names
 testpaths = 
   tests
+  smoke
 
+; Customising test class names
+python_classes = 
+  Check
+  Test
+
+; Customised pytest markers
 markers = 
   regression
   smoke
